# sr3-reader

./: .gitignore  README.md  pyproject.toml
examples/: plot_cartesian_grid.py  plot_coreflood_geochem.py
src/sr3_reader/: __init__.py  sr3_reader.py
